hostname changed as variable

--- a/container.yml
+++ b/container.yml
@@ -7,5 +7,4 @@
   gather_facts: yes
   tasks:
   - name: create container
-    command: 'sudo lxc launch images:centos/7 data1'
-## This is testing
+    command: 'sudo lxc launch images:centos/7 {{hostname}}'
