--- a/container.yml
+++ b/container.yml
@@ -1,8 +1,8 @@
 ---
 - hosts: local
   remote_user: support
-#  become: yes
-#  become_method: sudo
+  become: yes
+  become_method: sudo
   connection: ssh
   gather_facts: yes
   tasks:
