--- a/container.yml
+++ b/container.yml
@@ -1,10 +1,10 @@
 ---
 - hosts: local
-  remote_user: support
+  remote_user: jenkins
   become: yes
   become_method: sudo
   connection: ssh
   gather_facts: yes
   tasks:
   - name: create container
-    command: 'sudo lxc launch images:centos/7 {{hostname}}'
+    command: 'lxc launch images:centos/7 {{hostname}}'
