--- a/container.yml
+++ b/container.yml
@@ -7,4 +7,4 @@
   gather_facts: yes
   tasks:
   - name: create container
-    command: 'lxc launch images:centos/7 {{hostname}}'
+    command: 'lxc launch images:centos/7 data09'
