--- a/container.yml
+++ b/container.yml
@@ -11,4 +11,8 @@
   - name: stop container
     command: 'lxc stop data01'
   - name: delete container
-    command: 'lxc delete data01'
+    command: 'lxc delete data02'
+  - name: delete container
+    command: 'lxc delete data03'
+  - name: delete container
+    command: 'lxc delete data04'
