--- a/container.yml
+++ b/container.yml
@@ -6,10 +6,10 @@
   connection: ssh
   gather_facts: yes
   tasks:
-  - name: create container
-    command: 'lxc launch images:centos/7 data04'
-  - name: stop container
-    command: 'lxc stop data01'
+#  - name: create container
+#    command: 'lxc launch images:centos/7 data04'
+#  - name: stop container
+#    command: 'lxc stop data01'
   - name: delete container
     command: 'lxc delete data02'
   - name: delete container
