--- a/container.yml
+++ b/container.yml
@@ -7,7 +7,7 @@
   gather_facts: yes
   tasks:
   - name: create container
-    command: 'lxc launch images:centos/7 nitin'
+    command: 'lxc launch images:centos/7 sagar-machine'
 #  - name: stop container
 #    command: 'lxc stop data01'
 #  - name: delete container
